@@ -155,6 +155,7 @@ void cf_init(void)
     mudconf.btech_usedmechstore = 0;
     mudconf.btech_ooc_comsys = 0;
     mudconf.btech_idf_requires_spotter = 1;
+    mudconf.btech_vtol_ice_causes_fire = 1;
 #ifdef BT_FREETECHTIME
     mudconf.btech_freetechtime = 0;
 #endif
@@ -1234,6 +1235,8 @@ CONF conftable[] = {
         cf_int,         CA_GOD,         &mudconf.btech_ooc_comsys,	0},
     {(char *)"btech_idf_requires_spotter",
         cf_int,         CA_GOD,         &mudconf.btech_idf_requires_spotter, 0},
+    {(char *)"btech_vtol_ice_causes_fire",
+        cf_int,         CA_GOD,         &mudconf.btech_vtol_ice_causes_fire, 0},
 #ifdef BT_FREETECHTIME
     {(char *)"btech_freetechtime",
         cf_int,		CA_GOD,		&mudconf.btech_freetechtime,	0},
